junit test in scala is now compatible with Kryo on JVM 17